--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-db.url=jdbc:postgresql://localhost:5432/bb
+db.url=jdbc:postgresql://localhost:5432/postgres
 db.username=postgres
 db.password=root
